// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchManager matches snapshot if obs status is CONNECTED 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div data-v-11cc5f1c=\\"\\" class=\\"ipl-space color-dark m-t-8\\">
      <!--v-if-->
      <ipl-button-stub label=\\"End Game\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" data-test=\\"start-stop-game-button\\" class=\\"m-b-8\\"></ipl-button-stub>
      <div class=\\"layout horizontal\\">
        <!--v-if-->
        <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"true\\" disableonsuccess=\\"false\\" href=\\"\\" data-test=\\"show-casters-button\\" class=\\"max-width\\"></ipl-button-stub>
      </div>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;

exports[`MatchManager matches snapshot if obs status is CONNECTING 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div data-v-11cc5f1c=\\"\\" class=\\"ipl-space color-dark m-t-8\\">
      <!--v-if-->
      <!--v-if-->
      <div class=\\"layout horizontal\\">
        <!--v-if-->
        <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" data-test=\\"show-casters-button\\" class=\\"max-width\\"></ipl-button-stub>
      </div>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;

exports[`MatchManager matches snapshot if obs status is NOT_CONNECTED 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div data-v-11cc5f1c=\\"\\" class=\\"ipl-space color-dark m-t-8\\">
      <!--v-if-->
      <!--v-if-->
      <div class=\\"layout horizontal\\">
        <!--v-if-->
        <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" data-test=\\"show-casters-button\\" class=\\"max-width\\"></ipl-button-stub>
      </div>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;

exports[`MatchManager when automation action is in progress has expected button color and label when task name is changeScene 1`] = `"Change Scene"`;

exports[`MatchManager when automation action is in progress has expected button color and label when task name is hideScoreboard 1`] = `"Hide Scoreboard"`;

exports[`MatchManager when automation action is in progress has expected button color and label when task name is showCasters 1`] = `"Show Casters"`;

exports[`MatchManager when automation action is in progress has expected button color and label when task name is showScoreboard 1`] = `"Show Scoreboard"`;

exports[`MatchManager when automation action is in progress has expected button color and label when task name is unknown task 1`] = `"???"`;
